[package]
name = "ioctl-id"
edition = "2021"
authors = ["David Cuthbert <dacut@kanga.org>"]
description = "Rust identifiers for `ioctl(2)` calls on Unix-like systems."
homepage = "https://github.com/dacut/ioctl-id"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/dacut/ioctl-id.git"
version = "0.2.0"

[dependencies]
